# tccbox

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: wheel.yml
src/: __init__.py  __main__.py
test/: fib.c
