[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Super-verbose output for debugging purpose
build-verbosity = 3

# We restrict ourselves to CPython 3.9 and then repair the wheels to be
# independent of the Python version - I have not found a different solution
# within cibuildwheel to achieve this.
build = "cp311-*"
